--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -1,10 +1,13 @@
 body
   padding-top: 20px
+  font-family: Lobster Two;
+  font-size: 18px;
 
 #myCarousel .nav
   a small
-  display: block
+  display: inline-block
   background: #eee
+  clear: both
 
 .nav-justified > li > a
   border-radius: 0px
@@ -18,3 +21,55 @@ body
     background-color: #2980b9
   &[data-slide-to="3"].active a
     background-color: #8e44ad
+.header-mine 
+  float: right
+  background-color: #f8af00!important
+  color: #3f5f74
+.logo
+ 
+
+.top-menu 
+ margin-top: 80px
+ float: right
+ // display: flex
+ // list-style: none
+ text-decoration: none
+.top-menu li
+  padding-left: 30px
+  font-size: 22px
+  color: #3f5f74
+
+.top-menu li
+  display: inline-block
+  position: relative
+  padding-bottom: 3px
+  &:after
+    content: ''
+    display: block
+    position: absolute
+    right: -15px
+    bottom: 0
+    height: 6px
+    width: 0
+    background: transparent
+    transition: width .5s ease, background-color .5s ease
+  &:hover:after
+    width: 100%
+    background: #f8af00
+.hr-line
+ width: 100%
+ height: 4px
+ background-color: #f8af00
+
+.welcome
+ font-size: 30px
+
+ span 
+  display: inline-block
+  opacity: 0
+  -webkit-transition: 2s
+  transition: 2s
+.navbar
+ margin-bottom: 0px !important
+.item
+ display: inline-flex
