--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -15,6 +15,7 @@ body
 
 .nav-justified > li > a
   border-radius: 2px
+  color: #062f4a
 
 .nav-pills > li
   &[data-slide-to="0"].active a
@@ -30,7 +31,7 @@ body
 
 .label-taller
   font-size: 25px
-  top: 60px
+  top: 30px
 
 
 .select-taller
@@ -38,9 +39,12 @@ body
 
 
 .carousel-caption
-  top: 100px
+  top: 60px
+.carousel-inner
+  height: 250px
 
-
+.color-blue
+  #062f4a
 .header-mine
   float: right
   background-color: #f8af00
@@ -50,7 +54,8 @@ body
 .top-menu
   a
     text-decoration: none
-  margin-top: 40px
+    color: #062f4a
+  margin-top: -17px
   float: right
   display: flex
   list-style: none
@@ -76,13 +81,16 @@ body
       background: #f8af00
 
 
-
+.form-control
+  color: #fcf8e3 !important
+  background-color: #333  !important
+  border: 1px solid #f8af00 !important
 
 
 
 
 .hr-line
-  margin-bottom: 20px
+  margin-bottom: 30px
   width: 100%
   height: 4px
   background-color: #f8af00
@@ -90,6 +98,7 @@ body
 
 .welcome
   font-size: 30px
+  color: #062f4a
   span
     display: inline-block
     opacity: 0
