--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -3,9 +3,11 @@ body
   padding-top: 20px
   font-family: Lobster Two
   font-size: 18px
+  margin-top: 150px
+
 
 #myCarousel
-  margin-top: 159px
+  margin-top: 14px
   .nav
     display: inline-block
     background: #eee
@@ -32,7 +34,9 @@ body
 .label-taller
   font-size: 25px
   top: 30px
-
+.logo
+  float: left
+  margin: 10px
 
 .select-taller
   font-size: 18px
@@ -44,7 +48,7 @@ body
   height: 250px
 
 .color-blue
-  #062f4a
+  color: #062f4a
 .header-mine
   float: right
   background-color: #f8af00
@@ -55,7 +59,7 @@ body
   a
     text-decoration: none
     color: #062f4a
-  margin-top: -17px
+  margin-top: 45px
   float: right
   display: flex
   list-style: none
@@ -87,8 +91,6 @@ body
   border: 1px solid #f8af00 !important
 
 
-
-
 .hr-line
   margin-bottom: 30px
   width: 100%
@@ -97,14 +99,13 @@ body
 
 
 .welcome
-  font-size: 30px
+  font-size: 50px
   color: #062f4a
   span
     display: inline-block
     opacity: 0
     -webkit-transition: 2s
     transition: 2s
-
 .navbar
   margin-bottom: 0px !important
 
