refractoring carrusel/images

--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -5,7 +5,8 @@ body
   font-size: 18px
   margin-top: 150px
 
-
+.carousel-inner 
+  height: 400px !important
 #myCarousel
   margin-top: 14px
   .nav
@@ -14,29 +15,35 @@ body
 
 .carousel.slide
   margin-top: 159px
-
+.font-retiro
+  color: #062f4a
+.img-carrusel
+  border-radius: 20px
 .nav-justified > li > a
   border-radius: 2px
   color: #062f4a
-
+.size-categories
+  font-size: 22px
 .nav-pills > li
   &[data-slide-to="0"].active a
-    background-color: #c0cb3e
+    background-color: #f8af00 //#c0cb3e
   &[data-slide-to="1"].active a
-    background-color: #e67d3c
+    background-color: #f8af00//#e67d3c
   &[data-slide-to="2"].active a
-    background-color: #75c4d5
+    background-color: #f8af00//#75c4d5
   &[data-slide-to="3"].active a
-    background-color: #d584b3
+    background-color: #f8af00//#d584b3
   &[data-slide-to="4"].active a
-    background-color: #c8b783
+    background-color: #f8af00//#c8b783
 
 .label-taller
   font-size: 25px
-  top: 30px
+  top: -50px
 .logo
   float: left
   margin: 10px
+.title-mine
+  margin-top: 40px
 
 .select-taller
   font-size: 18px
@@ -89,17 +96,31 @@ body
   color: #fcf8e3 !important
   background-color: #333  !important
   border: 1px solid #f8af00 !important
+  margin-left: 100px
+  height: 35px
+  width: 481px
+.img-opac
+  opacity: 0.4
 
 
+.font-categories
+  font-family: Barrio
+.size-title-categories
+  font-size: 50px
+  margin-bottom: 30px
+div.form-group.label-taller
+  margin-top: -40px
 .hr-line
   margin-bottom: 30px
   width: 100%
   height: 4px
   background-color: #f8af00
 
+.welcome-top
+  margin-top: 20px
 
 .welcome
-  font-size: 50px
+  font-size: 40px
   color: #062f4a
   span
     display: inline-block
