--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,9 @@ body {
   font-size: 18px;
   margin-top: 150px; }
 
+.carousel-inner {
+  height: 400px !important; }
+
 #myCarousel {
   margin-top: 14px; }
   #myCarousel .nav {
@@ -13,28 +16,40 @@ body {
 .carousel.slide {
   margin-top: 159px; }
 
+.font-retiro {
+  color: #062f4a; }
+
+.img-carrusel {
+  border-radius: 20px; }
+
 .nav-justified > li > a {
   border-radius: 2px;
   color: #062f4a; }
 
+.size-categories {
+  font-size: 22px; }
+
 .nav-pills > li[data-slide-to="0"].active a {
-  background-color: #c0cb3e; }
+  background-color: #f8af00; }
 .nav-pills > li[data-slide-to="1"].active a {
-  background-color: #e67d3c; }
+  background-color: #f8af00; }
 .nav-pills > li[data-slide-to="2"].active a {
-  background-color: #75c4d5; }
+  background-color: #f8af00; }
 .nav-pills > li[data-slide-to="3"].active a {
-  background-color: #d584b3; }
+  background-color: #f8af00; }
 .nav-pills > li[data-slide-to="4"].active a {
-  background-color: #c8b783; }
+  background-color: #f8af00; }
 
 .label-taller {
   font-size: 25px;
-  top: 30px; }
+  top: -50px; }
 
 .logo {
   float: left;
   margin: 10px; }
+
+.title-mine {
+  margin-top: 40px; }
 
 .select-taller {
   font-size: 18px; }
@@ -85,7 +100,23 @@ body {
 .form-control {
   color: #fcf8e3 !important;
   background-color: #333 !important;
-  border: 1px solid #f8af00 !important; }
+  border: 1px solid #f8af00 !important;
+  margin-left: 100px;
+  height: 35px;
+  width: 481px; }
+
+.img-opac {
+  opacity: 0.4; }
+
+.font-categories {
+  font-family: Barrio; }
+
+.size-title-categories {
+  font-size: 50px;
+  margin-bottom: 30px; }
+
+div.form-group.label-taller {
+  margin-top: -40px; }
 
 .hr-line {
   margin-bottom: 30px;
@@ -93,8 +124,11 @@ body {
   height: 4px;
   background-color: #f8af00; }
 
+.welcome-top {
+  margin-top: 20px; }
+
 .welcome {
-  font-size: 50px;
+  font-size: 40px;
   color: #062f4a; }
   .welcome span {
     display: inline-block;
