--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -92,7 +92,7 @@ body
       background: #f8af00
 
 
-.form-control
+.form-personal
   color: #fcf8e3 !important
   background-color: #333  !important
   border: 1px solid #f8af00 !important
@@ -109,7 +109,7 @@ body
   font-size: 50px
   margin-bottom: 30px
 div.form-group.label-taller
-  margin-top: -40px
+  margin-top: -60px
 .hr-line
   margin-bottom: 30px
   width: 100%
