--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,11 +11,9 @@ html(lang='en')
   link(rel='icon', type='image/png', href='../img/only_logo.png')
 body
   include includes/top-header.pug
-  include includes/bottom-header.pug
-  .welcome.text-center.container
-    p.welcome-top
-      | Publica tu anuncio
-      .hr-line
+  include includes/bottom-header_public.pug
+
+  
   nav.navbar.navbar-default.navbar-count
     .container
       ul.top-menu
