--- a/public/css/style.css
+++ b/public/css/style.css
@@ -430,6 +430,9 @@ label {
     color: #fff;
     background-color: #2D3B55; }
 
+body {
+  margin-top: px; }
+
 .form-control:focus {
   border-color: #f8af00;
   box-shadow: inset 0 1px 1px rgba(255, 186, 18, 0.5), 0 0 6px rgba(255, 186, 18, 0.5); }
