--- a/public/sass/_createEvent.sass
+++ b/public/sass/_createEvent.sass
@@ -1,3 +1,5 @@
+body
+  margin-top: px
 .form-control:focus 
   border-color: #f8af00
   box-shadow: inset 0 1px 1px rgba(255,186,18,0.5), 0 0 6px rgba(255,186,18,0.5)
