--- a/views/add-event.pug
+++ b/views/add-event.pug
@@ -14,7 +14,7 @@ block content
           fieldset.form-group
             label(for='recipe-editor-ingredients') Camino
             |
-            select.form-control(name="road")
+            select.form-control(name="path")
               each val in ['Selecciona...', 'Yoga', 'Ayurveda', 'Yoga y Ayurveda']
                 option= val
 
@@ -22,7 +22,7 @@ block content
           fieldset.form-group
             label(for='recipe-editor-ingredients') Categoria de anuncio
             |
-            select.form-control(name="event")
+            select.form-control(name="category")
               each val in ['Selecciona...', 'Retiros', 'Formaciones', 'Talleres', 'Conferencias', 'Maestros espirituales']
                 option= val
         .col-xs-12.col-md-3
@@ -30,14 +30,14 @@ block content
             label(for='recipe-editor-ingredients') Comunidad aut&oacute;noma
             |
             - var cities = ["Selecciona...", "Andalucía", "Baleares", "Canarias", "Cantabria", "Cataluña", "Galicia", "La Rioja", "Navarra", "Aragón", "Castilla-La Mancha", "Castilla y León", "Comunidad Valenciana", "Extremadura", "Comunidad Valenciana", "Madrid", "Región de Murcia"];
-            select.form-control(name="city")
+            select.form-control(name="comunity")
               each val in cities
                 option= val
         .col-xs-12.col-md-12
           fieldset.form-group
             label(for='recipetitle') Localidad
             |
-            input#recipetitle.form-control(rows='1', maxlength='30', name="town")
+            input#recipetitle.form-control(rows='1', maxlength='30', name="localitation")
         .col-xs-12.col-md-2
           fieldset.form-group
             label(for='recipetitle') Fecha Inicio
@@ -49,7 +49,7 @@ block content
           fieldset.form-group
             br
             |
-            select.form-control(name="startHour")
+            select.form-control(name="timeHourStart")
               each val in ["01", "02", "03", "04", "05", "06", "07", "08", "09", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23"]
                 option= val
         .col-xs-12.col-md-1
@@ -58,7 +58,7 @@ block content
           fieldset.form-group
             br
             |
-            select.form-control(name="startMinute")
+            select.form-control(name="timeMinuteStart")
               each val in ["01", "02", "03", "04", "05", "06", "07", "08", "09", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30", "31", "32", "33", "34", "35", "36", "37", "38", "39", "40", "41", "42", "43", "44", "45", "46", "47", "48", "49", "50", "51", "52", "53", "54", "55", "56", "57", "58", "59"]
                 option= val
         .col-xs-12.col-md-2
@@ -72,7 +72,7 @@ block content
           fieldset.form-group
             br
             |
-            select.form-control(name="endHour")
+            select.form-control(name="timeHourEnd")
               each val in ["01", "02", "03", "04", "05", "06", "07", "08", "09", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23"]
                 option= val
         .col-xs-12.col-md-1
@@ -81,7 +81,7 @@ block content
           fieldset.form-group
             br
             |
-            select.form-control(name="endMinute")
+            select.form-control(name="timeMinuteEnd")
               each val in ["01", "02", "03", "04", "05", "06", "07", "08", "09", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30", "31", "32", "33", "34", "35", "36", "37", "38", "39", "40", "41", "42", "43", "44", "45", "46", "47", "48", "49", "50", "51", "52", "53", "54", "55", "56", "57", "58", "59"]
                 option= val
         .col-xs-12.col-md-12
@@ -92,6 +92,15 @@ block content
             label(for='recipe-editor-directions') Tags
             textarea#recipe-editor-directions.form-control(rows='3', name="tags")
           .text-center
-            button.btn.btn-warning(type='submit') Publicar
-
+            button.btn.btn-warning(type='submit' value="Submit") Publicar
+  .container          
+      each event in events
+          h2 Categoria: #{event.category}
+          h3 Titulo del evento: #{event.title}
+          p Localidad: #{event.localitation}
+          p Comunidad autónoma: #{event.comunity}
+          p Publicación: #{event.createEvent} 
+          p Hora inicio: #{event.timeHourStart}:#{event.timeMinuteStart}
+          p Descripción: #{event.description} 
+          p Tags: #{event.tags} 
 
