--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,26 +1,65 @@
 doctype html
-html(lang='en')
-  head
+head
   meta(charset='UTF-8')
-  title Encuentra tu camino: Tu portal de anuncios Yoga y Ayurveda
+  title Ayurveda & Yoga
   link(rel='stylesheet', href='/bower_components/bootstrap/dist/css/bootstrap.min.css')
   link(rel='stylesheet', type='text/css', href='/css/style.css')
   link(href='https://fonts.googleapis.com/css?family=Lobster+Two', rel='stylesheet')
   link(href='https://fonts.googleapis.com/css?family=News+Cycle', rel='stylesheet')
   link(href='https://fonts.googleapis.com/css?family=Barrio', rel='stylesheet')
   link(rel='icon', type='image/png', href='../img/only_logo.png')
-body
-  include includes/top-header.pug
-  include includes/bottom-header_public.pug
-
-  
-  nav.navbar.navbar-default.navbar-count
+nav.navbar.navbar-default.navbar-fixed-top.header-mine
+  .container
+    button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
+      span.sr-only  Toggle navigation
+      span.icon-bar  
+      span.icon-bar  
+      span.icon-bar  
+    .navbar-collapse.collapse
+      ul.nav.navbar-nav.navbar-left.color-blue
+        li
+          a(href='about.html')
+            i.glyphicon.glyphicon-envelope
+            |  info@encuentratucamino.com
+      ul.nav.navbar-nav.navbar-right.color-blue
+        li
+          a(href='about.html')
+            i.glyphicon.glyphicon-heart-empty
+            |  Mis favoritos
+        li
+          a(href='Register-login.html')
+            i.glyphicon.glyphicon-log-in
+            |  loggin
+  nav.navbar.navbar-default
     .container
-      ul.top-menu
-        li
-          a(href='about.html')  Mis anuncios en encuentra tu camino
-        li
-          a(href='about.html')  Datos del perfil
+      a(href='index.html')
+        img.logo(src='../img/only_logo.png', width='150px', height='90px')
+        .welcome.text-center
+      .font-categories.logo.title-mine
+        h2 "Encuentra tu camino"
+    ul.top-menu
+      li
+        a(href='about.html')
+          | Encuentra 
+          small
+            i.glyphicon.glyphicon-menu-down
+      li
+        a(href='about.html')  Conóncenos
+      li
+        a(href='about.html')  Blog
+      li
+        a(href='myAcount.html')  Anúnciate gratis
+
+ 
+
+
+include includes/footer.pug
   block content
+
+  footer.footer
+  p.copy.col-md-6 Copyright ® 2017, All Rights Reserved
+    
   script(src="/bower_components/jquery/dist/jquery.min.js")
   script(src="/bower_components/bootstrap/dist/js/bootstrap.min.js")
+  script(src='/js/carrusel.js')
+  script(src='/js/welcome.js')
