finalize pug /home :)

--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -51,6 +51,7 @@ body
 
 .carousel-caption
   top: 60px
+
 .carousel-inner
   height: 250px
 
@@ -224,7 +225,7 @@ div.form-group.label-taller
   font-family: News Cycle
 
 .cont-body
-  
+  margin-top: 100px !important
   margin-left: 100px
   margin-right: 150px
 
