--- a/public/css/style.css
+++ b/public/css/style.css
@@ -215,6 +215,7 @@ div.form-group.label-taller {
   font-family: News Cycle; }
 
 .cont-body {
+  margin-top: 100px !important;
   margin-left: 100px;
   margin-right: 150px; }
 
