create route /retiros & search home

--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -12,7 +12,10 @@ body
   .nav
     display: inline-block
     background: #eee
-
+.search
+  margin-left: -13px !important
+  border-radius: 2px !important
+  border: 1px solid #f8af00 !important
 .carousel.slide
   margin-top: 159px
 .font-retiro
