--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,6 +14,11 @@ body {
     display: inline-block;
     background: #eee; }
 
+.search {
+  margin-left: -13px !important;
+  border-radius: 2px !important;
+  border: 1px solid #f8af00 !important; }
+
 .carousel.slide {
   margin-top: 159px; }
 
