--- a/views/layout.pug
+++ b/views/layout.pug
@@ -32,7 +32,7 @@ nav.navbar.navbar-default.navbar-fixed-top.header-mine
             |  loggin
   nav.navbar.navbar-default
     .container
-      a(href='index.html')
+      a(href='/')
         img.logo(src='../img/only_logo.png', width='150px', height='90px')
         .welcome.text-center
       .font-categories.logo.title-mine
@@ -49,7 +49,7 @@ nav.navbar.navbar-default.navbar-fixed-top.header-mine
         li
           a(href='about.html')  Blog
         li
-          a(href='myAcount.html')  Anúnciate gratis
+          a(href='/home/acount')  Anúnciate gratis
 
  
 
